adjust submenu width to prevent wordwrap

--- a/css/less/navigation.less
+++ b/css/less/navigation.less
@@ -40,8 +40,8 @@
 	& ul {
 		display: none;
 		position: absolute;
-		width: 155px;
-		left: 8px;
+		width: 165px;
+		left: -4px;
 		top: -9999em;
 		background: #fff;
 		border: 1px solid #fff;
